--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             text-align: center;
             position: relative;
             overflow: hidden;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
 
         header h1 {
@@ -58,10 +59,24 @@
             color: #fff;
             text-decoration: none;
             transition: color 0.3s;
+            position: relative;
         }
 
         nav a:hover {
             color: #f4f4f4;
+        }
+
+        nav a::after {
+            content: '';
+            display: block;
+            width: 0;
+            height: 2px;
+            background: #fff;
+            transition: width 0.3s;
+        }
+
+        nav a:hover::after {
+            width: 100%;
         }
 
         .burger {
@@ -82,8 +97,8 @@
         section {
             margin-bottom: 2rem;
             padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
             background: #fff;
             animation: slideIn 0.5s ease forwards;
         }
@@ -95,21 +110,23 @@
 
         .project {
             margin: 1rem 0;
-            padding: 1rem;
+            padding: 1.5rem;
             border: 1px solid #ccc;
-            border-radius: 8px;
-            transition: background 0.3s;
+            border-radius: 10px;
+            transition: background 0.3s, transform 0.3s;
             display: flex;
             align-items: center;
         }
 
         .project:hover {
-            background-color: #eee;
+            background-color: #f9f9f9;
+            transform: translateY(-3px);
         }
 
         .project i {
             margin-right: 10px;
-            color: #000;
+            color: #2196F3;
+            font-size: 1.5rem;
         }
 
         .skills {
@@ -138,6 +155,11 @@
         footer a {
             color: #fff;
             text-decoration: none;
+            transition: color 0.3s;
+        }
+
+        footer a:hover {
+            color: #f4f4f4;
         }
 
         @media (max-width: 600px) {
@@ -206,11 +228,11 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p class="fadeInUp">Hello! I’m Prince, a passionate software engineer dedicated to crafting innovative solutions that enhance user experiences.<br> 
+            <p class="fadeInUp">Hello! I’m Prince, a passionate software engineer dedicated to crafting innovative solutions that enhance user experiences.<br>
             Currently studying at ICI College, I focus on mastering the skills necessary to thrive in the tech industry.</p>
-            <p class="fadeInUp">I love tackling challenging projects that push my limits and allow me to explore new technologies.<br> 
+            <p class="fadeInUp">I love tackling challenging projects that push my limits and allow me to explore new technologies.<br>
             In my free time, I engage in coding challenges, contribute to open-source projects, and explore various programming languages.</p>
-            <p class="fadeInUp">My goal is to create impactful software that improves people's lives while continuously learning and growing in this fast-paced field.<br> 
+            <p class="fadeInUp">My goal is to create impactful software that improves people's lives while continuously learning and growing in this fast-paced field.<br>
             I believe that collaboration and communication are key to successful projects, and I thrive in team environments.</p>
             <h3>Skills</h3>
             <div class="skills">
